--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
       - AWS_REGION=${AWS_REGION:-us-east-1}
       - SRE_GATEWAY_AUTH_TOKEN=${SRE_GATEWAY_AUTH_TOKEN}
       - ATLASSIAN_AUTH_TOKEN=${ATLASSIAN_AUTH_TOKEN}
-    # ports:
-    #   - "80:80"
-    #   - "443:443"
-    #   - "7860:7860"
+    ports:
+      - "18880:80"
+      - "19443:443"
+      - "18860:7860"   # 可选
     volumes:
       - /opt/mcp-gateway/servers:/app/registry/servers
       - /opt/mcp-gateway/models:/app/registry/models
